Change id from Int to String

--- a/Example/iOSDropDown/Main.storyboard
+++ b/Example/iOSDropDown/Main.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="U9U-T5-Ryu">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="U9U-T5-Ryu">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4aF-Bk-hh3">
-                                <rect key="frame" x="72.5" y="35" width="230" height="40"/>
+                                <rect key="frame" x="72.5" y="15" width="230" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="230" id="8Cr-aQ-06X"/>
                                     <constraint firstAttribute="height" constant="40" id="xt6-ev-MPp"/>
@@ -35,7 +33,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="1hJ-Zs-hfA">
-                                <rect key="frame" x="72.5" y="90" width="230" height="29"/>
+                                <rect key="frame" x="72.5" y="70" width="230" height="32"/>
                                 <segments>
                                     <segment title="Default"/>
                                     <segment title="Custom"/>
@@ -53,7 +51,6 @@
                                     <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Select Your Country" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0cc-wG-GZ9" customClass="DropDown" customModule="iOSDropDown">
                                         <rect key="frame" x="69" y="54" width="218" height="30"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                         <userDefinedRuntimeAttributes>
@@ -69,7 +66,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8ZN-gm-7r0">
-                                        <rect key="frame" x="98" y="458" width="159" height="30"/>
+                                        <rect key="frame" x="98" y="475" width="159" height="30"/>
                                         <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="MZ3-Za-SIj"/>
@@ -83,7 +80,7 @@
                                         </connections>
                                     </button>
                                     <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nKh-B2-FUx">
-                                        <rect key="frame" x="18" y="23" width="319" height="471"/>
+                                        <rect key="frame" x="18" y="23" width="319" height="488"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HideOptionWhenSelect" textAlignment="natural" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="87O-eR-DZ2">
                                                 <rect key="frame" x="20" y="272" width="151" height="35"/>
@@ -152,7 +149,6 @@
                                                     <constraint firstAttribute="height" constant="30" id="g9T-Pp-ykf"/>
                                                     <constraint firstAttribute="width" constant="115" id="u0S-UO-VaB"/>
                                                 </constraints>
-                                                <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                                 <userDefinedRuntimeAttributes>
@@ -167,7 +163,6 @@
                                                     <constraint firstAttribute="width" constant="115" id="N04-pJ-MbJ"/>
                                                     <constraint firstAttribute="height" constant="30" id="R2E-5n-fKN"/>
                                                 </constraints>
-                                                <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                                 <userDefinedRuntimeAttributes>
@@ -182,7 +177,6 @@
                                                     <constraint firstAttribute="height" constant="30" id="xlq-0P-HbI"/>
                                                     <constraint firstAttribute="width" constant="115" id="y83-0w-yY1"/>
                                                 </constraints>
-                                                <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                                 <userDefinedRuntimeAttributes>
@@ -197,7 +191,6 @@
                                                     <constraint firstAttribute="width" constant="115" id="R9E-o2-UGV"/>
                                                     <constraint firstAttribute="height" constant="30" id="kRP-SA-mpJ"/>
                                                 </constraints>
-                                                <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                                 <userDefinedRuntimeAttributes>
@@ -212,7 +205,6 @@
                                                     <constraint firstAttribute="height" constant="30" id="AGj-rE-W1H"/>
                                                     <constraint firstAttribute="width" constant="115" id="LQj-3d-AAq"/>
                                                 </constraints>
-                                                <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                                 <userDefinedRuntimeAttributes>
@@ -224,11 +216,10 @@
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JFK-tR-kay" customClass="DropDown" customModule="iOSDropDown_Example" customModuleProvider="target">
                                                 <rect key="frame" x="193" y="65" width="99" height="30"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                                 <userDefinedRuntimeAttributes>
-                                                    <userDefinedRuntimeAttribute type="number" keyPath="tableHieght">
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="tableHeight">
                                                         <real key="value" value="150"/>
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
@@ -250,7 +241,6 @@
                                                     <constraint firstAttribute="width" constant="115" id="BJ8-GY-F8r"/>
                                                     <constraint firstAttribute="height" constant="30" id="FzM-VY-cb4"/>
                                                 </constraints>
-                                                <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                                 <userDefinedRuntimeAttributes>
